# pet-adoption

./: .env  Dockerfile  README.md  docker-compose.yaml  init-animal-db.sh  init-application-db.sh  init-shelter-db.sh  init-user-db.sh  nginx_config.conf  package.json  remove_pycache.py
.github/workflows/: docker-image.yml
back-end/: CMakeLists.txt  Dockerfile  main.cpp
back-end/controllers/: UserController.cpp  UserController.hpp
back-end/handlers/: authorizeRequestHandler.cpp  authorizeRequestHandler.h  pingRequestHandler.cpp  pingRequestHandler.h  registerRequestHandler.h  requestHandler.cpp  requestHandler.hpp
back-end/handlers/authorizeRequestHandler/: authorizeRequestHandler.cpp  authorizeRequestHandler.h
back-end/handlers/initializers/: initializers.cpp  initializers.h
back-end/handlers/orm/user/: User.h
back-end/handlers/pingRequestHandler/: pingRequestHandler.cpp  pingRequestHandler.h
back-end/handlers/registerRequestHandler/: registerRequestHandler.cpp  registerRequestHandler.h
back-end/initializers/: initializers.cpp  initializers.h
back-end/interfaces/: UserControllerInterface.hpp  UserServiceInterface.hpp
back-end/local-structs/: localStructs.hpp
back-end/orm/: pet_adoption.sql  pet_adoption.xml
back-end/orm/animal/: Animal.cpp  Animal.h
back-end/orm/emailVerification/: EmailVerification.cpp  EmailVerification.h
back-end/orm/phoneVerification/: PhoneVerification.cpp  PhoneVerification.h
back-end/orm/shelter/: Shelter.cpp  Shelter.h
back-end/orm/user/: User.cpp  User.h
back-end/services/authService/: authService.cpp  authService.h
back-end/services/cipherService/: cipherService.cpp  cipherService.h
back-end/services/registrationService/: registrationService.cpp  registrationService.h
back-end/services/tokenService/: tokenService.cpp  tokenService.h
back-end/services/userService/: UserService.cpp  UserService.hpp
backend/animal/: main.py  requirements.txt  test_animal.py
backend/animal/animal_app/: animals.py  database.py
backend/animal/animal_app/dependencies/: dependencies.py
backend/animal/animal_app/models/: animal_db_model.py
backend/animal/animal_app/service/: animal_service.py
backend/application/application_app/: application.py  test_application_unit.py
backend/application/application_app/controllers/: application_controller.py
backend/application/application_app/db/: database.py  remove_db.py
backend/application/application_app/models/: application_db_models.py  application_local_models.py
backend/application/application_app/service/: application_service.py
backend/shelter/: main.py  test_shelter_unit.py
backend/shelter/controllers/: shelter_controller.py
backend/shelter/models/: shelter_db_model.py  shelter_local_model.py
backend/shelter/utilities/: utilities.py
backend/tests/: test.py  utils.py
backend/user/: main.py  test_user.py
backend/user/user_app/: database.py  users.py
backend/user/user_app/controllers/: user_controller.py
backend/user/user_app/dependencies/: dependencies.py
backend/user/user_app/models/: user_db_model.py  user_local_model.py
fast-api/: remove_pycache.py  requirements.txt  test.py
fast-api/animal/: main.py  requirements.txt  test_animal.py
fast-api/animal/animal_app/: animals.py
fast-api/application/: Dockerfile  main.py
fast-api/application/application_app/: application.py  test_application_unit.py
fast-api/application/utilities/: common.py
fast-api/shelter/: database.py  main.py  remove_db.py  requirements.txt  shelter.py  test_shelter_unit.py
fast-api/shelter/controllers/: shelter_controller.py
fast-api/shelter/dependencies/: dependencies.py
fast-api/shelter/models/: shelter_db_model.py  shelter_local_model.py
fast-api/shelter/service/: shelter_service.py
fast-api/shelter/utilities/: converter.py  utilities.py
fast-api/user/: Dockerfile  database.py  main.py  nginx_config.conf  requirements.txt  test_user.py  test_user_controller_unit.py  test_user_service_integration.py  test_user_service_unit.py  test_user_unit.py
fast-api/user/controllers/: user_controller.py
fast-api/user/dependencies/: dependencies.py
fast-api/user/models/: user_db_model.py  user_local_model.py
fast-api/user/service/: user_service.py
fast-api/user/user_app/: config.py  database.py  remove_db.py  user_app_config.json  users.py
front-end/: Dockerfile  index.html  package-lock.json  package.json  script.js
front-end/src/: App.css  App.js  index.css  index.js
front-end/src/Components/: AnimalList.js  AnimalTable.js  AnimalTableItem.js  ApplicationList.js  CreateAnimal.js  Header.js  Menu.jsx  RequestList.js
front-end/src/Contexts/: AuthContext.js
front-end/src/DB/: DB.js
front-end/src/Pages/: Animal.js  AnimalMain.js  Contacts.js  Donate.js  Home.js  Login.js  ShelterAcc.js  Signup.js  UserAcc.js  UserDataContext.js
front-end/src/Wrappers/: WithAuth.js  WithShelterAuth.js  WithUserAuth.js
front-end/src/css/: AnimalMain.css  Auth.css  Header.css  Home.css  List.css  Modal.css  ShelterAcc.css  Signup.css
public/: index.html
python-backend/mysite/animal/: admin.py  models.py
python-backend/mysite/mysite/: settings.py
python-backend/mysite/user/: admin.py  models.py
src/: App.css  App.js  consts.js  index.js
src/Components/: AnimalDetailsModal.js  AnimalList.js  AnimalTable.js  AnimalTableItem.js  ApplicationList.js  CreateAnimal.js  Header.js  Menu.jsx  RequestList.js
src/Contexts/: AuthContext.js
src/DB/: DB.js
src/List/: DB.js
src/Pages/: Animal.js  AnimalMain.js  Donate.js  Home.js  Login.js  ShelterAcc.js  Signup.js  UserAcc.js
src/Wrappers/: WithUserAuth.js  WithoutAuth.js
src/css/: AnimalDetailsModal.css  AnimalMain.css  Auth.css  Donate.css  Header.css  List.css  Menu.css  Modal.css  Signup.css
user/: database.py  main.py
user/controllers/: user_controller.py
user/service/: user_service.py
(+24 files in other folders)
